--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -1,3 +1,10 @@
 body {
   /* font-family: "Poppins", sans-serif !important; */
 }
+
+.siteLogo {
+  width: 105px;
+  height: 75px;
+  margin: auto;
+  display: block;
+}
